<?xml version="1.0"?>
<package format="2">

  <name>pid_controller</name>

  <version>1.0.0</version>

  <description>PID Controller Library</description>

  <author email="rmshedlock@gmail.com">Ryan Shedlock</author>
  <maintainer email="rmshedlock@gmail.com">Ryan Shedlock</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>




</package>